--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  margin : 10px;
+  width : 300px;
+  height : 35px;
+  font-size: 18px;
+  padding-left: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  height : 45px;
+  margin : 5px;
+  background-color : blue;
+  border-radius: 5px;
+  color : white;
 }
+button:hover{
+  cursor: pointer;
+}
+ul{
+  display: grid;
+  place-items: center;
+}
+li{
+  list-style: none;
+  background-color: #00df6c;
+  margin: 10px;
+  padding-top: 20px;
+  width: 300px;
+  height: 40px;
+  color:white;
+  font-size: 23px;
+  font-family: monospace;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+#task{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
